logo added, using inline CSS

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="style.css" class="">
 </head>
 <body>
+
+    <!-- Navigation Bar Start -->
+    <div class="navbar">
+        <div class="logo">
+            <img src="images/logo.png" alt="" width="125px" class="">
+        </div>
+    </div>
+
+    <!-- Navigation Bar End -->
+
     
 </body>
 </html>
