--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
         <div class="logo">
             <img src="images/logo.png" alt="" width="125px" class="">
         </div>
+        <nav class="">
+            <ul class="">
+                <li class=""><a href="#" class="">Home</a></li>
+                <li class=""><a href="#" class="">Products</a></li>
+                <li class=""><a href="#" class="">About</a></li>
+                <li class=""><a href="#" class="">Contact</a></li>
+                <li class=""><a href="#" class="">Account</a></li>
+            </ul>
+        </nav>
     </div>
 
     <!-- Navigation Bar End -->
