button added and styled

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <div class="col-2">
             <h1 class="">Give Your Workout<br> A New Style!</h1>
             <p class="">Success isn't always about greatness. It's about consistency. Consistent<br>hard work gains success. Greatness will come.</p>
+            <a href="#" class="btn">Explore Now</a>
         </div>
         
         <div class="col-2">
