cart icont added and styled

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     <li class=""><a href="#" class="">Account</a></li>
                 </ul>
             </nav>
+            <img src="images/cart.png" alt="" class="" width="30px" height="30px">
         </div>
         <!-- Navigation Bar End -->
 
