categories content added

--- a/index.html
+++ b/index.html
@@ -57,7 +57,26 @@
 </div>    
 <!-- Header Section End -->
 
+<!-- Featured Categories Section Start -->
+<div class="categories">
+    <div class="row">
 
+        <div class="col-3">
+            <img src="images/category-1.jpg" alt="" class="">
+        </div>
+
+        <div class="col-3">
+            <img src="images/category-2.jpg" alt="" class="">
+        </div>
+
+        <div class="col-3">
+            <img src="images/category-3.jpg" alt="" class="">
+        </div>
+
+    </div>
+</div>
+
+<!-- Featured Categories Section End -->
 
     
 </body>
