--- a/index.html
+++ b/index.html
@@ -59,20 +59,22 @@
 
 <!-- Featured Categories Section Start -->
 <div class="categories">
-    <div class="row">
+    <div class="small-container">
+        <div class="row">
 
-        <div class="col-3">
-            <img src="images/category-1.jpg" alt="" class="">
+            <div class="col-3">
+                <img src="images/category-1.jpg" alt="" class="">
+            </div>
+
+            <div class="col-3">
+                <img src="images/category-2.jpg" alt="" class="">
+            </div>
+
+            <div class="col-3">
+                <img src="images/category-3.jpg" alt="" class="">
+            </div>
+
         </div>
-
-        <div class="col-3">
-            <img src="images/category-2.jpg" alt="" class="">
-        </div>
-
-        <div class="col-3">
-            <img src="images/category-3.jpg" alt="" class="">
-        </div>
-
     </div>
 </div>
 
