--- a/index.html
+++ b/index.html
@@ -77,8 +77,20 @@
         </div>
     </div>
 </div>
-
 <!-- Featured Categories Section End -->
+
+<!-- Featured Products Section Start -->
+ <div class="small-container">
+    <h2 class="">Featured Products</h2>
+    <div class="row">
+        <div class="col-4">
+            <img src="images/product-1.jpg" alt="" class="">
+            <h4 class="">Red Printed T-shirt</h4>
+            <p class="">$50.00</p>
+        </div>
+    </div>
+ </div>
+<!-- Featured Products Section End -->
 
     
 </body>
