font awesome cdn added and icons used

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
         rel="stylesheet">
     <!-- Google Font CDN for Poppins End -->
 
+    <!-- Font Awesome CDN Start -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Font Awesome CDN Start -->
+
 </head>
 <body>
 
@@ -86,6 +92,13 @@
         <div class="col-4">
             <img src="images/product-1.jpg" alt="" class="">
             <h4 class="">Red Printed T-shirt</h4>
+            <div class="rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+            </div>
             <p class="">$50.00</p>
         </div>
     </div>
