--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
  <div class="small-container">
     <h2 class="">Featured Products</h2>
     <div class="row">
+
         <div class="col-4">
             <img src="images/product-1.jpg" alt="" class="">
             <h4 class="">Red Printed T-shirt</h4>
@@ -101,6 +102,46 @@
             </div>
             <p class="">$50.00</p>
         </div>
+        
+        <div class="col-4">
+            <img src="images/product-2.jpg" alt="" class="">
+            <h4 class="">Cool Shoes</h4>
+            <div class="rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+                <i class="fa-regular fa-star"></i>
+            </div>
+            <p class="">$50.00</p>
+        </div>
+
+        <div class="col-4">
+            <img src="images/product-3.jpg" alt="" class="">
+            <h4 class="">THEE Pants</h4>
+            <div class="rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+            </div>
+            <p class="">$50.00</p>
+        </div>
+
+        <div class="col-4">
+            <img src="images/product-4.jpg" alt="" class="">
+            <h4 class="">Blue Puma Shirt</h4>
+            <div class="rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+            </div>
+            <p class="">$50.00</p>
+        </div>
+
     </div>
  </div>
 <!-- Featured Products Section End -->
