--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 <!-- Featured Products Section Start -->
  <div class="small-container">
-    <h2 class="">Featured Products</h2>
+    <h2 class="title">Featured Products</h2>
     <div class="row">
 
         <div class="col-4">
