--- a/index.html
+++ b/index.html
@@ -263,5 +263,26 @@
 </div>
 <!-- Latest Products Section End -->
 
+<!-- Offer Section Start -->
+<div class="offer">
+    <div class="small-container">
+        <div class="row">
+
+            <div class="col-2">
+                <img src="images/exclusive.png" alt="" class="offer-img">
+            </div>
+           
+            <div class="col-2">
+                <p class="">Exclusively Available on RedStore</p>
+                <h1 class="">Smart Band 4</h1>
+                <small class="">The Mi Smart Band 4 features a 39.9% larger (than Mi Band 3) AMOLED color full-touch display with adjustable brightness, so everything is clear as can be.</small>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<!-- Offer Section End -->
+
 </body>
 </html>
