offer section done!

--- a/index.html
+++ b/index.html
@@ -276,6 +276,8 @@
                 <p class="">Exclusively Available on RedStore</p>
                 <h1 class="">Smart Band 4</h1>
                 <small class="">The Mi Smart Band 4 features a 39.9% larger (than Mi Band 3) AMOLED color full-touch display with adjustable brightness, so everything is clear as can be.</small>
+                <br>
+                <a href="#" class="btn">Buy Now &#x2192;</a>
             </div>
 
         </div>
