testimonial content added

--- a/index.html
+++ b/index.html
@@ -283,8 +283,60 @@
         </div>
     </div>
 </div>
-
 <!-- Offer Section End -->
+
+<!-- Testimonial Section Start -->
+<div class="testimonial">
+    <div class="small-container">
+        <div class="row">
+
+            <div class="col-3">
+                <i class="fa-solid fa-quote-left"></i>
+                <p class="">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus laborum illum ab veniam culpa quod atque optio quos odit id, beatae reiciendis quo, neque dolores deleniti ipsam quas ut blanditiis?</p>
+                <div class="rating">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                </div>
+                <img src="images/user-1.png" alt="" class="">
+                <h3 class="">Murph McConahey</h3>
+            </div>
+
+            <div class="col-3">
+                <i class="fa-solid fa-quote-left"></i>
+                <p class="">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus laborum illum ab veniam culpa quod atque optio quos odit id, beatae reiciendis quo, neque dolores deleniti ipsam quas ut blanditiis?</p>
+                <div class="rating">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                </div>
+                <img src="images/user-2.png" alt="" class="">
+                <h3 class="">Matt Damon</h3>
+            </div>
+
+            <div class="col-3">
+                <i class="fa-solid fa-quote-left"></i>
+                <p class="">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus laborum illum ab veniam culpa quod atque optio quos odit id, beatae reiciendis quo, neque dolores deleniti ipsam quas ut blanditiis?</p>
+                <div class="rating">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                </div>
+                <img src="images/user-3.png" alt="" class="">
+                <h3 class="">Anne Hathaway</h3>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<!-- Testimonial Section End -->
 
 </body>
 </html>
