--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                     <i class="fa-regular fa-star"></i>
                 </div>
                 <img src="images/user-1.png" alt="" class="">
-                <h3 class="">Murph McConahey</h3>
+                <h3 class="">Murph Cooper</h3>
             </div>
 
             <div class="col-3">
