Brands Section content added

--- a/index.html
+++ b/index.html
@@ -335,8 +335,37 @@
         </div>
     </div>
 </div>
-
 <!-- Testimonial Section End -->
+
+<!-- Brands Section Start -->
+ <div class="brands">
+    <div class="small-container">
+        <div class="row">
+
+            <div class="col-5">
+                <img src="images/logo-godrej.png" alt="" class="">
+            </div>
+
+            <div class="col-5">
+                <img src="images/logo-oppo.png" alt="" class="">
+            </div>
+
+            <div class="col-5">
+                <img src="images/logo-coca-cola.png" alt="" class="">
+            </div>
+
+            <div class="col-5">
+                <img src="images/logo-paypal.png" alt="" class="">
+            </div>
+
+            <div class="col-5">
+                <img src="images/logo-philips.png" alt="" class="">
+            </div>
+
+        </div>
+    </div>
+ </div>
+<!-- Brands Section End -->
 
 </body>
 </html>
