footer content added

--- a/index.html
+++ b/index.html
@@ -367,5 +367,45 @@
  </div>
 <!-- Brands Section End -->
 
+<!-- Footer Section Start -->
+ <div class="footer">
+    <div class="container">
+        <div class="row">
+
+            <div class="footer-col-1">
+                <h3 class="">Download Our App</h3>
+                <p class="">Download App for Android and iOS Mobile Phone.</p>
+            </div>
+
+            <div class="footer-col-2">
+                <img src="images/logo-white.png" alt="" class="">
+                <p class="">Our Purpose Is To Sustainably Make the Pleasure and Benefits of Sports Accessible to the Many.</p>
+            </div>
+
+            <div class="footer-col-3">
+                <h3 class="">Useful Links</h3>
+                <ul class="">
+                    <li class="">Coupons</li>
+                    <li class="">Blog Post</li>
+                    <li class="">Return Policy</li>
+                    <li class="">Join Affiliate</li>
+                </ul>
+            </div>
+
+            <div class="footer-col-4">
+                <h3 class="">Follow Us</h3>
+                <ul class="">
+                    <li class="">Facebook</li>
+                    <li class="">Twitter</li>
+                    <li class="">Instagram</li>
+                    <li class="">YouTube</li>
+                </ul>
+            </div>
+
+        </div>
+    </div>
+ </div>
+<!-- Footer Section End -->
+
 </body>
 </html>
