--- a/index.html
+++ b/index.html
@@ -375,6 +375,10 @@
             <div class="footer-col-1">
                 <h3 class="">Download Our App</h3>
                 <p class="">Download App for Android and iOS Mobile Phone.</p>
+                <div class="app-logo">
+                    <img src="images/play-store.png" alt="" class="">
+                    <img src="images/app-store.png" alt="" class="">
+                </div>
             </div>
 
             <div class="footer-col-2">
