copyright content added

--- a/index.html
+++ b/index.html
@@ -407,6 +407,8 @@
             </div>
 
         </div>
+        <hr>
+        <p class="copyright">Copyright 2025 helloKristinaFaye</p>
     </div>
  </div>
 <!-- Footer Section End -->
