media query started w/ nav bar

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <div class="navbar">
             <div class="logo">
                 <img src="images/logo.png" alt="" width="125px" class="">
+            
             </div>
             <nav class="">
                 <ul class="">
@@ -42,6 +43,8 @@
                 </ul>
             </nav>
             <img src="images/cart.png" alt="" class="" width="30px" height="30px">
+            <img src="images/menu.png" alt="" class="menu-icon" width="30px" height="30px">
+
         </div>
         <!-- Navigation Bar End -->
 
