JS started for menu toggle

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             
             </div>
             <nav class="">
-                <ul class="">
+                <ul class="" id="MenuItems">
                     <li class=""><a href="#" class="">Home</a></li>
                     <li class=""><a href="#" class="">Products</a></li>
                     <li class=""><a href="#" class="">About</a></li>
@@ -43,7 +43,7 @@
                 </ul>
             </nav>
             <img src="images/cart.png" alt="" class="" width="30px" height="30px">
-            <img src="images/menu.png" alt="" class="menu-icon" width="30px" height="30px">
+            <img src="images/menu.png" alt="" class="menu-icon" width="30px" height="30px" onClick="menutoggle()">
 
         </div>
         <!-- Navigation Bar End -->
@@ -416,5 +416,7 @@
  </div>
 <!-- Footer Section End -->
 
+    <!-- JS for toggle menu -->
+     <script src="script.js"></script>
 </body>
 </html>
